[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
archive_name = "GDApplibArchive23"

[node name="Authentication" type="HTTPRequest" parent="."]

[node name="Upload" type="HTTPRequest" parent="."]
use_threads = true

[node name="Download" type="HTTPRequest" parent="."]
use_threads = true

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "start upload"

[node name="Button2" type="Button" parent="."]
margin_left = -1.0
margin_top = 33.0
margin_right = 11.0
margin_bottom = 53.0
text = "stop upload"

[node name="Button3" type="Button" parent="."]
margin_left = 136.0
margin_right = 148.0
margin_bottom = 20.0
text = "start downloading"

[connection signal="request_completed" from="Authentication" to="." method="_on_Authentication_request_completed"]
[connection signal="request_completed" from="Upload" to="." method="_on_Upload_request_completed"]
[connection signal="request_completed" from="Download" to="." method="_on_Download_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
